[tool.poetry]
name = "m3p0"
version = "0.1.0"
description = ""
authors = ["chandr-andr (Kiselev Aleksandr) <chandr@chandr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
pyyaml = "^6.0.2"
psqlpy = "^0.7.7"
colorama = "^0.4.6"

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.2"
black = "^24.8.0"
isort = "^5.13.2"


[tool.poetry.group.type.dependencies]
mypy = "^1.11.2"


[tool.poetry.group.dev.dependencies]
types-colorama = "^0.4.15.20240311"

[tool.m3p0]
migration_path = "./m3p0/testing/migrations"
postgres_url = "postgres://postgres:postgres@localhost:5432/m3p0"
driver = "m3p0.testing.test_driver:build_driver"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
